# opengl

./: CMakeLists.txt  CMakelists.txt  test.py
include/: camera.h  mesh.h  model.h  shader.h  texture.h
include/assimp/: .editorconfig  revision.h
include/glad/: glad.h
lib/: CMakeLists.txt  libGLEW.dylib
lib/assimp/: libassimpd.5.dylib
res/shaders/: Basic.shaders
res/shders/: fragment.shader  fragmentColor.shader  fragmentLighting.shader  vertex.shader  vertexTest.shader
src/: IndexBuffer.cpp  Renderer.cpp  Renderer.h  Shader.cpp  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  camera.cpp  glad.c  main.cpp  shader.cpp  texture.cpp  utils.hpp
src/include/: IndexBuffer.h  Renderer.h  Shader.h  VertexArray.h  VertexBufferLayout.h
vender/stb_image/: stb_image.cpp
